[package]
name = "access-log-to-prometheus-metrics"
version = "0.1.0"
edition = "2018"
authors = ["Remi Rampin <remi@rampin.org>"]
description = "Exports Prometheus metrics by reading a log stream"
repository = "https://github.com/remram44/nginx-log-to-prometheus-metrics"
license = "BSD-3-Clause"

[dependencies]
prometheus = "0.13"
hyper = { version = "0.14", features = ["server", "http1", "tcp"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
