[package]
name = "access-log-to-prometheus-metrics"
version = "0.1.0"
edition = "2018"
rust-version = "1.46"
authors = ["Remi Rampin <remi@rampin.org>"]
description = "Exports Prometheus metrics by reading a log stream"
repository = "https://github.com/remram44/access-log-to-prometheus-metrics"
license = "BSD-3-Clause"

[dependencies]
clap = "2"
env_logger = { version = "0.7", default-features = false, features = ["termcolor", "atty", "humantime"] }
hyper = { version = "0.14", features = ["server", "http1", "tcp"] }
log = "0.4"
notify = "4"
prometheus = { version = "0.13", default-features = false }
regex = { version = "1", optional = true }
tokio = { version = "1.0", features = ["macros", "rt"] }

[features]
process = ["prometheus/process"]
re = ["regex"]

[profile.release]
lto = true
opt-level = "s"
codegen-units = 1
panic = "abort"
